cherry-pick TestableNymContract for the dkg contract from #5091

--- a/common/cosmwasm-smart-contracts/contracts-common-testing/Cargo.toml
+++ b/common/cosmwasm-smart-contracts/contracts-common-testing/Cargo.toml
@@ -20,5 +20,7 @@ rand_chacha = { workspace = true }
 rand = { workspace = true }
 cw-multi-test = { workspace = true }
 
+nym-contracts-common = { path = "../contracts-common" }
+
 [lints]
 workspace = true
