--- a/contracts/multisig/cw3-flex-multisig/Cargo.toml
+++ b/contracts/multisig/cw3-flex-multisig/Cargo.toml
@@ -16,10 +16,6 @@ required-features = ["cosmwasm-schema"]
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[features]
-# use library feature to disable all instantiate/execute/query exports
-library = []
-
 [dependencies]
 cw-utils = { workspace = true }
 cw2 = { workspace = true }
@@ -34,9 +30,15 @@ cosmwasm-std = { workspace = true }
 nym-group-contract-common = { path = "../../../common/cosmwasm-smart-contracts/group-contract" }
 nym-multisig-contract-common = { path = "../../../common/cosmwasm-smart-contracts/multisig-contract" }
 nym-contracts-common = { path = "../../../common/cosmwasm-smart-contracts/contracts-common" }
+nym-contracts-common-testing = { path = "../../../common/cosmwasm-smart-contracts/contracts-common-testing", optional = true }
 
 [dev-dependencies]
 easy-addr = { path = "../../../common/cosmwasm-smart-contracts/easy_addr" }
 cw4-group = { path = "../cw4-group" }
 cw-multi-test = { workspace = true }
 cw20-base = { workspace = true }
+
+[features]
+# use library feature to disable all instantiate/execute/query exports
+library = []
+testable-cw3-contract = ["nym-contracts-common-testing"]
