--- a/nym-node-status-api/nym-node-status-api/Cargo.toml
+++ b/nym-node-status-api/nym-node-status-api/Cargo.toml
@@ -3,7 +3,7 @@
 
 [package]
 name = "nym-node-status-api"
-version = "3.3.2"
+version = "4.0.3"
 authors.workspace = true
 repository.workspace = true
 homepage.workspace = true
@@ -49,7 +49,7 @@ serde_json = { workspace = true }
 serde_json_path = { workspace = true }
 strum = { workspace = true }
 strum_macros = { workspace = true }
-sqlx = { workspace = true, features = ["runtime-tokio-rustls", "time"] }
+sqlx = { workspace = true, features = ["runtime-tokio-rustls", "time", "postgres"] }
 thiserror = { workspace = true }
 time = { workspace = true, features = ["formatting"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
@@ -64,11 +64,6 @@ utoipauto = { workspace = true }
 
 nym-node-metrics = { path = "../../nym-node/nym-node-metrics" }
 
-[features]
-default = ["pg"]
-sqlite = ["sqlx/sqlite"]
-pg = ["sqlx/postgres"]
-
 [build-dependencies]
 anyhow = { workspace = true }
 tokio = { workspace = true, features = ["macros"] }
@@ -76,6 +71,7 @@ sqlx = { workspace = true, features = [
     "runtime-tokio-rustls",
     "macros",
     "migrate",
+    "postgres",
 ] }
 
 [dev-dependencies]
