adapt ip-packet-client

--- a/nym-ip-packet-client/Cargo.toml
+++ b/nym-ip-packet-client/Cargo.toml
@@ -12,6 +12,7 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+bincode.workspace = true
 bytes.workspace = true
 futures.workspace = true
 thiserror.workspace = true
