--- a/common/authenticator-requests/Cargo.toml
+++ b/common/authenticator-requests/Cargo.toml
@@ -13,6 +13,8 @@ base64 = { workspace = true }
 bincode = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
+semver = { workspace = true }
+strum_macros = { workspace = true }
 thiserror = { workspace = true }
 
 nym-credentials-interface = { path = "../credentials-interface" }
