--- a/.github/workflows/ci-build-vpn-api-wasm.yml
+++ b/.github/workflows/ci-build-vpn-api-wasm.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   wasm:
-    runs-on: arc-ubuntu-22.04
+    runs-on: arc-linux-latest
     env:
       CARGO_TERM_COLOR: always
       RUSTUP_PERMIT_COPY_RENAME: 1
