Tests + getting reuable client in new() for speedup

--- a/smolmix/Cargo.toml
+++ b/smolmix/Cargo.toml
@@ -24,3 +24,4 @@ reqwest.workspace = true
 dirs.workspace = true
 rustls  = { version = "0.23", default-features = false, features = ["std"] }
 webpki-roots = "1.0.2"
+serde_json.workspace = true
