--- a/nym-registration-client/Cargo.toml
+++ b/nym-registration-client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nym-wg-gateway-client"
+name = "nym-registration-client"
 version = "0.1.0"
 authors.workspace = true
 repository.workspace = true
@@ -12,17 +12,17 @@ license.workspace = true
 workspace = true
 
 [dependencies]
-nym-authenticator-client = { path = "../nym-authenticator-client" }
-nym-authenticator-requests = { path = "../common/authenticator-requests" }
-nym-bandwidth-controller = { path = "../common/bandwidth-controller" }
-nym-credentials-interface = { path = "../common/credentials-interface" }
-nym-crypto = { path = "../common/crypto" }
-nym-node-requests = { path = "../nym-node/nym-node-requests" }
-nym-pemstore = { path = "../common/pemstore" }
-nym-sdk = { path = "../sdk/rust/nym-sdk" }
-nym-statistics-common = { path = "../common/statistics" }
-nym-validator-client = { path = "../common/client-libs/validator-client" }
-rand.workspace = true
 thiserror.workspace = true
+tokio.workspace = true
+tokio-util.workspace = true
 tracing.workspace = true
 url.workspace = true
+
+nym-authenticator-client = { path = "../nym-authenticator-client" }
+nym-bandwidth-controller = { path = "../common/bandwidth-controller" }
+nym-credential-storage = { path = "../common/credential-storage" }
+nym-credentials-interface = { path = "../common/credentials-interface" }
+nym-ip-packet-client = { path = "../nym-ip-packet-client" }
+nym-registration-common = { path = "../common/registration" }
+nym-sdk = { path = "../sdk/rust/nym-sdk" }
+nym-validator-client = { path = "../common/client-libs/validator-client" }
