CI fix attempt 2

--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "build:packages": "run-s build:packages:theme build:packages:react",
     "build:packages:theme": "lerna run --scope @nymproject/mui-theme build",
     "build:packages:react": "lerna run --scope @nymproject/react build",
-    "build:react-example": "lerna run --scope @nymproject/react-webpack-with-theme-example build --stream",
     "build:playground": "lerna run --scope @nymproject/react storybook:build --stream",
-    "build:ci:storybook": "yarn build && yarn dev:on && run-p build:react-example build:playground && yarn build:ci:storybook:collect-artifacts",
+    "build:ci:storybook": "yarn build && yarn dev:on && run-p build:playground && yarn build:ci:storybook:collect-artifacts ",
     "build:ci:storybook:collect-artifacts": "mkdir -p ts-packages/dist && mv sdk/typescript/packages/react-components/storybook-static ts-packages/dist/storybook && mv sdk/typescript/examples/react/mui-theme/dist ts-packages/dist/example",
     "prebuild:ci": "yarn dev:on && yarn",
     "build:ci": "run-s build:types build:packages build:wasm build:ci:sdk",
