--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@npmcli/node-gyp": "^3.0.0",
+    "@types/minimatch": "^6.0.0",
     "lerna": "^7.3.0",
     "node-gyp": "^9.3.1",
     "npm-run-all": "^4.1.5",
