--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prebuild:ci": "yarn dev:on && yarn",
     "build:ci": "run-s build:types build:packages build:wasm build:ci:sdk",
     "postbuild:ci": "yarn dev:off",
-    "build:ci:sdk": "lerna run --scope '{@nymproject/sdk,@nymproject/node-tester,@nymproject/contract-clients,@nymproject/sdk-react,@nymproject/mix-fetch,@nymproject/nodejs-client,@nymproject/mix-fetch-node}' build --stream",
+    "build:ci:sdk": "lerna run --scope '{@nymproject/sdk,@nymproject/node-tester,@nymproject/sdk-react,@nymproject/mix-fetch,@nymproject/nodejs-client,@nymproject/mix-fetch-node}' build --stream",
     "docs:prod:build": "run-s docs:prod:build:ws",
     "docs:prod:build:ws": "lerna run docs:prod:build --stream",
     "sdk:build": "./sdk/typescript/scripts/build-prod-sdk.sh",
