--- a/wasm/client/Cargo.toml
+++ b/wasm/client/Cargo.toml
@@ -25,7 +25,7 @@ serde_json = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
-gloo-timers = "0.3.0"
+gloo-timers = { workspace = true }
 once_cell = { workspace = true }
 
 thiserror = { workspace = true }
@@ -40,7 +40,7 @@ nym-gateway-requests = { path = "../../common/gateway-requests" }
 nym-node-tester-utils = { path = "../../common/node-tester-utils", optional = true }
 nym-node-tester-wasm = { path = "../node-tester", optional = true }
 
-tokio_with_wasm = { version = "0.8.7", features = ["full"] }
+tokio_with_wasm = { workspace = true, features = ["full"] }
 
 [dev-dependencies]
 wasm-bindgen-test = { workspace = true }
