--- a/common/nymsphinx/chunking/Cargo.toml
+++ b/common/nymsphinx/chunking/Cargo.toml
@@ -24,3 +24,6 @@ nym-metrics = { path = "../../nym-metrics" }
 nym-crypto = { path = "../../crypto", version = "0.4.0", features = [
     "asymmetric",
 ] }
+
+[target."cfg(target_arch = \"wasm32\")".dependencies.wasmtimer]
+workspace = true
