--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "private": true,
   "license": "Apache 2.0",
   "workspaces": [
-    "dist/wasm/**",
-    "dist/node/**",
-    "dist/ts/**",
-    "sdk/typescript/packages/mui-theme",
-    "sdk/typescript/packages/react-components",
-    "sdk/typescript/packages/validator-client",
+    "sdk/typescript/packages/**",
+    "sdk/typescript/examples/**",
     "ts-packages/*",
     "nym-wallet",
     "explorer-nextjs",
     "explorer-v2",
     "types",
-    "clients/validator"
+    "clients/validator",
+    "sdk/typescript/packages/**",
+    "sdk/typescript/examples/**",
+    "sdk/typescript/codegen/**"
   ],
   "scripts": {
     "nuke": "npx rimraf **/node_modules node_modules",
@@ -27,14 +26,13 @@
     "build:packages": "run-s build:packages:theme build:packages:react",
     "build:packages:theme": "lerna run --scope @nymproject/mui-theme build",
     "build:packages:react": "lerna run --scope @nymproject/react build",
-    "build:react-example": "lerna run --scope @nymproject/react-webpack-with-theme-example build --stream",
     "build:playground": "lerna run --scope @nymproject/react storybook:build --stream",
-    "build:ci:storybook": "yarn build && yarn dev:on && run-p build:react-example build:playground && yarn build:ci:storybook:collect-artifacts",
-    "build:ci:storybook:collect-artifacts": "mkdir -p ts-packages/dist && mv sdk/typescript/packages/react-components/storybook-static ts-packages/dist/storybook && mv sdk/typescript/examples/react/mui-theme/dist ts-packages/dist/example",
+    "build:ci:storybook": "yarn build && yarn dev:on && run-p build:playground && yarn build:ci:storybook:collect-artifacts ",
+    "build:ci:storybook:collect-artifacts": "mkdir -p ts-packages/dist && mv sdk/typescript/packages/react-components/storybook-static ts-packages/dist/storybook ",
     "prebuild:ci": "yarn dev:on && yarn",
     "build:ci": "run-s build:types build:packages build:wasm build:ci:sdk",
     "postbuild:ci": "yarn dev:off",
-    "build:ci:sdk": "lerna run --scope '{@nymproject/sdk,@nymproject/node-tester,@nymproject/contract-clients,@nymproject/sdk-react,@nymproject/mix-fetch,@nymproject/nodejs-client,@nymproject/mix-fetch-node}' build --stream",
+    "build:ci:sdk": "lerna run --scope '{@nymproject/sdk,@nymproject/node-tester,@nymproject/sdk-react,@nymproject/mix-fetch,@nymproject/nodejs-client,@nymproject/mix-fetch-node}' build --stream",
     "docs:prod:build": "run-s docs:prod:build:ws",
     "docs:prod:build:ws": "lerna run docs:prod:build --stream",
     "sdk:build": "./sdk/typescript/scripts/build-prod-sdk.sh",
@@ -49,6 +47,7 @@
   },
   "devDependencies": {
     "@npmcli/node-gyp": "^3.0.0",
+    "@types/minimatch": "^6.0.0",
     "lerna": "^7.3.0",
     "node-gyp": "^9.3.1",
     "npm-run-all": "^4.1.5",
