--- a/wasm/client/Cargo.toml
+++ b/wasm/client/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "nym-client-wasm"
-authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>", "Jedrzej Stuczynski <andrew@nymtech.net>"]
+authors = [
+    "Dave Hrycyszyn <futurechimp@users.noreply.github.com>",
+    "Jedrzej Stuczynski <andrew@nymtech.net>",
+]
 version = "1.4.0-rc.0"
 edition = "2021"
 keywords = ["nym", "sphinx", "wasm", "webassembly", "privacy"]
@@ -22,15 +25,22 @@ serde_json = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
+gloo-timers = { workspace = true }
+once_cell = { workspace = true }
+
 thiserror = { workspace = true }
 tsify = { workspace = true, features = ["js"] }
+web-sys = { workspace = true }
 
 nym-bin-common = { path = "../../common/bin-common" }
 wasm-client-core = { path = "../../common/wasm/client-core" }
 wasm-utils = { path = "../../common/wasm/utils" }
+nym-gateway-requests = { path = "../../common/gateway-requests" }
 
 nym-node-tester-utils = { path = "../../common/node-tester-utils", optional = true }
 nym-node-tester-wasm = { path = "../node-tester", optional = true }
+
+tokio_with_wasm = { workspace = true, features = ["full"] }
 
 [dev-dependencies]
 wasm-bindgen-test = { workspace = true }
