--- a/documentation/docs/package.json
+++ b/documentation/docs/package.json
@@ -24,11 +24,11 @@
     "@cosmjs/encoding": "^0.32.2",
     "@cosmjs/proto-signing": "^0.32.2",
     "@cosmjs/stargate": "^0.32.2",
-    "@cosmos-kit/core": "^2.8.9",
+    "@cosmos-kit/core": "^2.16.3",
     "@cosmos-kit/keplr": "^2.6.9",
     "@cosmos-kit/keplr-extension": "^2.7.9",
     "@cosmos-kit/ledger": "^2.6.9",
-    "@cosmos-kit/react": "^2.10.11",
+    "@cosmos-kit/react": "^2.22.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@interchain-ui/react": "^1.8.0",
@@ -55,11 +55,13 @@
   },
   "devDependencies": {
     "@types/node": "18.11.10",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "raw-loader": "^4.0.2",
-    "typescript": "^4.9.3"
+    "typescript": "^5.9.3"
   },
   "private": false
 }
