--- a/documentation/docs/package.json
+++ b/documentation/docs/package.json
@@ -54,6 +54,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@next/swc-linux-x64-gnu": "15.5.0",
     "@types/node": "18.11.10",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
