--- a/nym-node-status-api/nym-node-status-api/Cargo.toml
+++ b/nym-node-status-api/nym-node-status-api/Cargo.toml
@@ -3,7 +3,7 @@
 
 [package]
 name = "nym-node-status-api"
-version = "4.0.10"
+version = "4.0.11-rc0"
 authors.workspace = true
 repository.workspace = true
 homepage.workspace = true
