--- a/common/bin-common/Cargo.toml
+++ b/common/bin-common/Cargo.toml
@@ -25,42 +25,33 @@ schemars = { workspace = true, features = ["preserve_order"], optional = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, optional = true }
 thiserror = { workspace = true }
-tracing = { workspace = true, optional = true }
-tracing-core = { workspace = true, optional = true }
+tracing = { workspace = true }
+tracing-core = { workspace = true }
 tracing-opentelemetry = { workspace = true, optional = true }
-tracing-serde = { workspace = true, optional = true }
-tracing-subscriber = { workspace = true, features = ["env-filter", "json"], optional = true }
-tracing-tree = { workspace = true, optional = true }
+tracing-serde = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
+tracing-tree = { workspace = true }
 utoipa = { workspace = true, optional = true }
 
 [build-dependencies]
 vergen = { workspace = true, features = ["build", "git", "gitcl", "rustc", "cargo"] }
 
 [features]
-default = ["otel"] # 🚨🚨🚨 TODO: remove otel as a default feature 🚨🚨🚨
+default = []
 openapi = ["utoipa"]
 output_format = ["serde_json", "dep:clap"]
 bin_info_schema = ["schemars"]
-basic_tracing = ["dep:tracing", "tracing-subscriber"]
-tokio-console = ["dep:tracing", "tracing-subscriber"]
-tracing = [
-    "basic_tracing",
-    "chrono",
-    "serde_json",
-    "tracing-core",
-    "tracing-opentelemetry",
-    "tracing-serde",
-    "tracing-subscriber",
-    "tracing-tree",
-]
+tokio-console = ["otel"]
 otel = [
+    "chrono",
+    "tracing-opentelemetry",
     "opentelemetry",
     "opentelemetry-otlp",
     "opentelemetry-semantic-conventions",
     "opentelemetry-stdout",
     "opentelemetry_sdk",
+    "serde_json",
     "rand",
-    "tracing",
 ]
 clap = ["dep:clap", "dep:clap_complete", "dep:clap_complete_fig"]
 models = []
