--- a/tools/internal/contract-state-importer/importer-cli/Cargo.toml
+++ b/tools/internal/contract-state-importer/importer-cli/Cargo.toml
@@ -22,7 +22,7 @@ tracing = { workspace = true }
 
 importer-contract = { path = "../importer-contract" }
 nym-validator-client = { path = "../../../../common/client-libs/validator-client" }
-nym-bin-common = { path = "../../../../common/bin-common", features = ["basic_tracing"] }
+nym-bin-common = { path = "../../../../common/bin-common" }
 nym-network-defaults = { path = "../../../../common/network-defaults" }
 
 nym-mixnet-contract-common = { path = "../../../../common/cosmwasm-smart-contracts/mixnet-contract" }
