--- a/tools/internal/validator-status-check/Cargo.toml
+++ b/tools/internal/validator-status-check/Cargo.toml
@@ -23,7 +23,7 @@ time = { workspace = true }
 
 
 nym-validator-client = { path = "../../../common/client-libs/validator-client" }
-nym-bin-common = { path = "../../../common/bin-common", features = ["output_format", "basic_tracing"] }
+nym-bin-common = { path = "../../../common/bin-common", features = ["output_format"] }
 nym-network-defaults = { path = "../../../common/network-defaults" }
 nym-http-api-client = { path = "../../../common/http-api-client" }
 
