--- a/tools/nymvisor/Cargo.toml
+++ b/tools/nymvisor/Cargo.toml
@@ -33,7 +33,7 @@ tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 
 nym-async-file-watcher = { path = "../../common/async-file-watcher" }
-nym-bin-common = { path = "../../common/bin-common", features = ["output_format", "basic_tracing"] }
+nym-bin-common = { path = "../../common/bin-common", features = ["output_format"] }
 nym-config = { path = "../../common/config" }
 nym-task = { path = "../../common/task"}
 
