add missed stuff from rebase

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -146,7 +146,7 @@ members = [
     "sdk/ffi/shared",
     "sdk/rust/nym-sdk",
     "smolmix",
-    "service-providers/authenticator",
+    # "service-providers/authenticator",
     "service-providers/common",
     "service-providers/ip-packet-router",
     "service-providers/network-requester",
