--- a/nym-gateway-directory/Cargo.toml
+++ b/nym-gateway-directory/Cargo.toml
@@ -41,5 +41,7 @@ tokio-util.workspace = true
 tracing.workspace = true
 url.workspace = true
 
+serde_json.workspace = true
+
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
