Fix FFI shared lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -141,9 +141,9 @@ members = [
     "nym-statistics-api",
     "nym-validator-rewarder",
     "nyx-chain-watcher",
-    # "sdk/ffi/cpp",
-    # "sdk/ffi/go",
-    # "sdk/ffi/shared",
+    "sdk/ffi/cpp",
+    "sdk/ffi/go",
+    "sdk/ffi/shared",
     "sdk/rust/nym-sdk",
     "mixtcp",
     # "service-providers/authenticator",
