--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,7 +117,7 @@ members = [
     "common/wireguard-private-metadata/tests",
     "common/wireguard-types",
     "common/zulip-client",
-    "documentation/autodoc",
+    # "documentation/autodoc",
     "gateway",
     "nym-api",
     "nym-api/nym-api-requests",
