--- a/nym-gateway-directory/Cargo.toml
+++ b/nym-gateway-directory/Cargo.toml
@@ -12,11 +12,10 @@ workspace = true
 [dependencies]
 itertools.workspace = true
 nym-client-core = { path = "../common/client-core" }
-nym-http-api-client = { path = "../common/http-api-client" }
-nym-sphinx = { path = "../common/nymsphinx" } # replaces the types pulled in from nym-sdk in nym-vpn-client repo
-nym-topology = { path = "../common/topology" } # replaces the types pulled in from nym-sdk in nym-vpn-client repo
+nym-http-api-client = { path = "../common/http-api-client", features = ["network-defaults"] }
+nym-sphinx = { path = "../common/nymsphinx" }
+nym-topology = { path = "../common/topology" }
 nym-validator-client = { path = "../common/client-libs/validator-client" }
-# nym-vpn-api-client = { git = "https://github.com/nymtech/nym-vpn-client/", rev = "5ab01ba06057449614dd6a8450d04358c5ec33d1" }
 nym-crypto = { path = "../common/crypto" }
 nym-sphinx-addressing = { path = "../common/nymsphinx/addressing" }
 nym-network-defaults = { path = "../common/network-defaults" }
