Gateway side things

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,9 @@ members = [
     "common/nym-cache",
     "common/nym-connection-monitor",
     "common/nym-id",
+    "common/nym-kcp",
+    "common/nym-lp",
+    "common/nym-lp-common",
     "common/nym-metrics",
     "common/nym_offline_compact_ecash",
     "common/nymnoise",
